--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -19,7 +19,7 @@
 # To learn more, please read the Rails Internationalization guide
 # available at http://guides.rubyonrails.org/i18n.html.
 
-en:
-  hello: "Hello world"
-  log_in: "Log in"
-  sign_up: "Sign up"
+ru:
+  hello: "Привет мир"
+  log_in: "Войти"
+  sign_up: "Регистрация"
