--- a/config/locales/devise.ru.yml
+++ b/config/locales/devise.ru.yml
@@ -48,7 +48,7 @@ ru:
       updated: "Ваша учётная запись успешно изменена."
       updated_but_not_signed_in: "Ваш аккаунт успешно изменен, но так как ваш пароль изменился, нужно войти снова."
     sessions:
-      signed_in: "Вход из сервиса выполнен."
+      signed_in: "Вход в сервис выполнен."
       signed_out: "Выход из сервиса выполнен."
       already_signed_out: "Выход из сервиса выполнен."
     unlocks:
