--- a/config/locales/devise.ru.yml
+++ b/config/locales/devise.ru.yml
@@ -15,7 +15,7 @@ ru:
       last_attempt: "У Вас осталась еще одна попытка ввести пароль до блокировки."
       not_found_in_database: "Неверный %{authentication_keys} или пароль."
       timeout: "Ваш сеанс закончился. Пожалуйста, войдите в систему снова."
-      unauthenticated: "Вам необходимо войти в систему или зарегистрироваться."
+      unauthenticated: "Проверьте Логин/Пароль или зарегистрируйтесь."
       unconfirmed: "Вы должны подтвердить вашу учётную запись."
       account_date_restricted: "(valid_until) Аккаунт не активен. Обратитесь к администратору."
     mailer:
