--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -25,9 +25,20 @@ ru:
   sign_up: "Регистрация"
   save: 'Сохранить'
   will_paginate:
-    previous_label: "Назад"
-    next_label: "Вперёд"
-    page_gap: "…"
+    previous_label: "&#8592; Назад"
+    next_label: "вперёд &#8594;"
+    page_gap: "&hellip;"
+    page_entries_info:
+      single_page:
+        zero:  "%{model} не найдена"
+        one:   "показана 1 %{model}"
+        other: "показаны все %{count} %{model}"
+      single_page_html:
+        zero:  "%{model} не найдена"
+        one:   "показана <b>1</b> %{model}"
+        other: "показаны <b>все&nbsp;%{count}</b> %{model}"
+      multi_page: "показана %{model} %{from} - %{to} из %{count} всего"
+      multi_page_html: "показана %{model} <b>%{from}&nbsp;-&nbsp;%{to}</b> из <b>%{count}</b> всего"
   activerecord:
     models:
       user: "Пользователь"
