remove two tables

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -41,12 +41,33 @@ ru:
       multi_page_html: "показана %{model} <b>%{from}&nbsp;-&nbsp;%{to}</b> из <b>%{count}</b> всего"
   activerecord:
     models:
-      user: "Пользователь"
+      user:
+        one: "пользователь"
+        other: "пользователи"
+      mycase:
+        one: "заявка"
+        other: "заявки"      
     attributes:
-      email: "Email"
-      password: "Пароль"
-      name: "Имя"
-      subdomain: "Домен"
+      user: &user
+        name: "имя"
+        phone: "телефон"
+        email: "email"
+        role: "роль"
+      mycase: &mycase
+        status: "статус"
+        created_at: "создано"
+        updated_at: "обновлено"
+        client_id: "клиент"
+        mycasetype: "тип"
+        insales_financial_status: "финансовый статус инсейлс"
+        insales_custom_status_title: "название статуса инсейлс"
+        insales_order_id: "номер заказа инсейлс"
+      client: &client
+        name: "имя"
+        surname: "фамилия"
+        email: "email"
+        phone: "телефон"
+        clientid: "id клиент инсейлс"
     errors:
       messages:
         blank: " - не может быть пустым"
@@ -65,6 +86,14 @@ ru:
       success: обновили!
     remove_nested:
       success: удалили!
+  helpers:
+    label:
+      user:
+        <<: *user
+      mycase:
+        <<: *mycase
+      client:
+        <<: *client
   message_setups:
     <<: *model_system_flash
   date:
