--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -84,9 +84,11 @@ ru:
         updated_at: "обновлено"
         client_id: "клиент"
         mycasetype: "тип"
-        insales_financial_status: "финансовый статус инсейлс"
-        insales_custom_status_title: "название статуса инсейлс"
+        insales_financial_status: "фин татус инсейлс"
+        insales_custom_status_title: "статуса инсейлс"
         insales_order_id: "номер заказа инсейлс"
+        casetype: "тип"
+        number: "номер"
       client: &client
         name: "имя"
         surname: "фамилия"
